navigation bar done

--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="./src/app.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 
     <title>Blog</title>
 </head>
 
 <body>
-    <p id="test-text"></p>
+    <header>
+        <nav>
+            <ul>
+                <li><img class="nav-logo" src="./assets/logomarca.svg" alt="Logo of a person and a lamp"></li>
+                <li class="nav-text">BLOG</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
 </body>
 
 </html>
