posts page done

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
     <main>
+        <p class="main-title">User posts</p>
         <section id="posts"></section>
     </main>
 </body>
