--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="./src/data.js" defer></script>
     <link rel="stylesheet" href="style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <title>Blog</title>
 </head>
 
