Source code split using namespace

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="./src/data.js" defer></script>
+    <script src="./production/Post.js" defer></script>
+    <script src="./production/Comment.js" defer></script>
+    <script src="./production/data.js" defer></script>
+    <script src="./production/main.js" defer></script>
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
