--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="./production/Post.js" defer></script>
-    <script src="./production/Comment.js" defer></script>
-    <script src="./production/data.js" defer></script>
-    <script src="./production/main.js" defer></script>
+    <script src="./out/Post.js" defer></script>
+    <script src="./out/Comment.js" defer></script>
+    <script src="./out/data.js" defer></script>
+    <script src="./out/DOM.js" defer></script>
+    <script src="./out/main.js" defer></script>
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
