--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
     <title>Blog</title>
 </head>
@@ -22,14 +23,24 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><img class="nav-logo" src="./assets/logomarca.svg" alt="Logo of a person and a lamp"></li>
-                <li class="nav-text">BLOG</li>
-            </ul>
+            <div class="content-wrapper">
+                <ul>
+                    <li>
+                        <img class="nav-logo" src="./assets/logomarca.svg" alt="Logo of a person and a lamp">
+                    </li>
+
+                    <li class="nav-text">BLOG</li>
+                </ul>
+            </div>
         </nav>
     </header>
-    <main>
-    </main>
+    <div class="content-wrapper">
+        <main>
+        </main>
+    </div>
+
+    <p class="error-message">Screen width incompatible.</p>
+    <p class="error-message">Largura de tela incompatível.</p>
 </body>
 
 </html>
